Add comprehensive documentation with setup and client guides
- Create docs/ folder with organized documentation structure
- Add compatibility matrix covering Java, JUnit, platforms, and HTTP clients
- Add setup guides for JVM (JUnit 4/5), Android, and KMP projects
- Add HTTP client guides for OkHttp, Retrofit, and Ktor
- Add Java 24+ migration guide with alternative strategies
- Add advanced configuration guide with all options
- Restructure README.md for better scannability and quick navigation
- Add cross-links throughout documentation for easy discovery

Documentation includes:
- 6 platform/framework setup guides
- 3 HTTP client-specific guides
- Compatibility matrix and advanced configuration reference
- Migration strategies for Java 24+ (SecurityManager removal)

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude <noreply@anthropic.com>